# lisa

./: .gitignore  README.md  index.html  tailwind.config.ts  vite.config.ts
backend/: .env.example  README.md  __init__.py  app.py  deepgram_test.py  main.py  pyproject.toml  requirements.txt
backend/routers/: __init__.py  health.py  tts.py  voice.py  websocket.py
backend/services/: __init__.py  cleanup.py  deepgram_service.py  openai_service.py
src/: App.tsx  index.css
src/components/: CallControls.tsx  ChatHistory.tsx  VoiceVisualizer.tsx  WaveAnimation.tsx
src/hooks/: useAudioVisualization.ts  useVoiceChat.ts
src/pages/: Index.tsx  Landing.tsx
src/types/: index.ts
src/utils/: sounds.ts
