[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "deepgram-sdk==3.10.1",
    "fastapi==0.110.0",
    "openai==1.14.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.7",
    "uvicorn==0.27.1",
    "websockets==12.0",
]
